Изм 1.1 Произведен рефакторинг кода в части изменения имен переменных и ресурсов применительно к проекту переназваны фрагменты и откорректированы первичные данные заменены иконки

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,15 +6,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_baseline_home_24"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:id="@+id/nav_multiplication"
+            android:icon="@drawable/ic_milti_24"
+            android:title="@string/menu_multiplication" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_summation"
+            android:icon="@drawable/ic_add_outline_24"
+            android:title="@string/menu_summation" />
     </group>
 </menu>
